--- a/CSharpDevConnect.TPL.Exercises/CSharpDevConnect.TPL.Exercises.csproj
+++ b/CSharpDevConnect.TPL.Exercises/CSharpDevConnect.TPL.Exercises.csproj
@@ -51,14 +51,17 @@
     <Compile Include="CourseRepository.cs" />
     <Compile Include="Enrollment.cs" />
     <Compile Include="Course.cs" />
-    <Compile Include="Exercise-Parallel\ExampleSolution\AnswerUserLoader.cs" />
-    <Compile Include="Exercise-Parallel\ExampleSolution\AnswerUserAndCourseLoader.cs" />
-    <Compile Include="Exercise-Parallel\ILoader.cs" />
-    <Compile Include="Exercise-Parallel\UserAndCourseLoader.cs" />
+    <Compile Include="UseParallel\ExampleSolution\AnswerUserLoader.cs" />
+    <Compile Include="UseParallel\ExampleSolution\AnswerUserAndCourseLoader.cs" />
+    <Compile Include="UseParallel\ILoader.cs" />
+    <Compile Include="UseParallel\UserAndCourseLoader.cs" />
+    <Compile Include="UseTask\EnrollmentLoader.cs" />
+    <Compile Include="UseTask\ITaskLoader.cs" />
+    <Compile Include="UseTask\TaskLoaderRunner.cs" />
     <Compile Include="RepositoryBase.cs" />
     <Compile Include="User.cs" />
-    <Compile Include="Exercise-Parallel\UserLoader.cs" />
-    <Compile Include="Exercise-Parallel\ParallelLoaderRunner.cs" />
+    <Compile Include="UseParallel\UserLoader.cs" />
+    <Compile Include="UseParallel\ParallelLoaderRunner.cs" />
     <Compile Include="SQLiteDataStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserRepository.cs" />
@@ -71,7 +74,9 @@
   <ItemGroup>
     <EmbeddedResource Include="scripts\schema.sql" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="UseTask\ExampleSolution\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
