--- a/CSharpDevConnect.TPL.Exercises/CSharpDevConnect.TPL.Exercises.csproj
+++ b/CSharpDevConnect.TPL.Exercises/CSharpDevConnect.TPL.Exercises.csproj
@@ -48,23 +48,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CourseRepository.cs" />
-    <Compile Include="Enrollment.cs" />
-    <Compile Include="Course.cs" />
+    <Compile Include="Repository\EnrollmentRepository.cs" />
+    <Compile Include="Repository\CourseRepository.cs" />
+    <Compile Include="Model\Enrollment.cs" />
+    <Compile Include="Model\Course.cs" />
     <Compile Include="UseParallel\ExampleSolution\AnswerUserLoader.cs" />
     <Compile Include="UseParallel\ExampleSolution\AnswerUserAndCourseLoader.cs" />
     <Compile Include="UseParallel\ILoader.cs" />
     <Compile Include="UseParallel\UserAndCourseLoader.cs" />
     <Compile Include="UseTask\EnrollmentLoader.cs" />
+    <Compile Include="UseTask\ExampleSolution\AnswerEnrollmentLoader.cs" />
     <Compile Include="UseTask\ITaskLoader.cs" />
+    <Compile Include="LoaderRunnerBase.cs" />
     <Compile Include="UseTask\TaskLoaderRunner.cs" />
-    <Compile Include="RepositoryBase.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Repository\RepositoryBase.cs" />
+    <Compile Include="Model\User.cs" />
     <Compile Include="UseParallel\UserLoader.cs" />
     <Compile Include="UseParallel\ParallelLoaderRunner.cs" />
-    <Compile Include="SQLiteDataStore.cs" />
+    <Compile Include="Repository\SQLiteDataStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserRepository.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -74,9 +77,7 @@
   <ItemGroup>
     <EmbeddedResource Include="scripts\schema.sql" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UseTask\ExampleSolution\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.94.0\build\net40\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
