--- a/CSharpDevConnect.TPL/CSharpDevConnect.TPL.Examples.csproj
+++ b/CSharpDevConnect.TPL/CSharpDevConnect.TPL.Examples.csproj
@@ -42,8 +42,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ParallelLoopStateTests.cs" />
+    <Compile Include="ConsoleLogger.cs" />
+    <Compile Include="ParallelLoopStateExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaskChainingExamples.cs" />
+    <Compile Include="TaskCreatorExamples.cs" />
+    <Compile Include="TaskExceptionHandlingExamples.cs" />
+    <Compile Include="TaskResultExample.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
