--- a/CSharpDevConnect.TPL/CSharpDevConnect.TPL.Examples.csproj
+++ b/CSharpDevConnect.TPL/CSharpDevConnect.TPL.Examples.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ConsoleLogger.cs" />
     <Compile Include="ParallelLoopStateExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaskCancelingExamples.cs" />
     <Compile Include="TaskChainingExamples.cs" />
     <Compile Include="TaskCreatorExamples.cs" />
     <Compile Include="TaskExceptionHandlingExamples.cs" />
