--- a/CSharpDevConnect.TPL/CSharpDevConnect.TPL.Examples.csproj
+++ b/CSharpDevConnect.TPL/CSharpDevConnect.TPL.Examples.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleLogger.cs" />
+    <Compile Include="ParallelForEachExamples.cs" />
     <Compile Include="ParallelLoopStateExamples.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskCancelingExamples.cs" />
