Clean up notes from PPT

--- a/CSharpDevConnect.TPL.Exercises/CSharpDevConnect.TPL.Exercises.csproj
+++ b/CSharpDevConnect.TPL.Exercises/CSharpDevConnect.TPL.Exercises.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <EmbeddedResource Include="data\enrollments.json" />
+    <None Include="data\readMe.md" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
